# AI-Engineer-Deploy

./: .dockerignore  .env.sample  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  TestAPIs.http  assistant.py  debug_main.py  docker-compose.yml  langfuse_prompts  main.py  model.py  pyproject.toml  requirements.txt  smartphones.json  task-1.md  task-2.md  task-3.md  task-4.md  tests.http  tools.py
app/: main.py
app/config/: config.yml  prompts.yml  rails.co
config/: actions.py  prompts.yml
src/ai_engineer_deploy/: __init__.py  main.py
src/ai_engineer_deploy/model/: __init__.py  model.py
src/ai_engineer_deploy/service/: __init__.py  service.py
starter_code/: .dockerignore  .env.template  Dockerfile  ec2_setup.sh  list_prompts.py  main.py  requirements.txt
task-2/: .env.template  main.py  requirements.txt  test.py
tasks/: task_1.md  task_2.md  task_3.md  task_4.md  task_5.md
tasks/task_1/: task_1.md  task_1_solution.md
tasks/task_2/: tast_2_solution.md
tasks/task_3/: task_3_solution.md
