[project]
name = "ai-engineer-deploy"
version = "0.1.0"
description = ""
authors = [
    {name = "Ignacio Ponisio",email = "ponisio.ignacio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.0"
dependencies = [
    "langchain>=0.3.0,<1.0.0",
    "langchain-community>=0.2.5,<2.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-qdrant>=0.2.1",
    "langchain-redis>=0.2.4",
    "langfuse==2.60.8",
    "nemoguardrails>=0.20.0,<1.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "fastapi[all] (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
packages = [{include = "ai_engineer_deploy", from = "src"}]

[project.scripts]
ai-deploy = "ai_engineer_deploy.main:main"
ask-api = "ai_engineer_deploy.service.service:start"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
