[project]
name = "ai-engineer-deploy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.0",
    "gunicorn>=25.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-openai==1.1.12",
    "langchain-qdrant==1.1.0",
    "langchain-redis==0.2.5",
    "langfuse==4.0.1",
    "nemoguardrails==0.21.0",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.44.0",
]
